10/12/2008 David Teller <David.Teller@univ-orleans.fr>:
	* IO.ml: removed dependency on [ExtString]
	* IO.ml: [string_enum] added
	* IO.ml: [chars_of] now uses [string_enum]
	* IO.ml: [output_enum] now uses [string_enum]
	* extUTF8.ml: removed dependency on [ExtString]
	* extUTF8.ml: [string_splice] added
	* extUTF8.ml: 
	* extString.ml*: [print] added
	* extList.ml: changed default values of optional arguments of [print]
	* extArray.ml: changed default values of optional arguments of [print]
	
10/11/2008 David Teller <David.Teller@univ-orleans.fr>:
	* extInt.ml*, extInt32.ml*, extInt64.ml*, extBig_int.ml*: [( -- )], [( --- )] added
	* extInt32.ml, extInt64.ml, extNativeint.mli: [type t] moved upwards
	
10/10/2008 David Teller <David.Teller@univ-orleans.fr>:
	* about.html: created
	* extFloat.ml*: [exp], [log], [log10], [cos], [sin], [tan], [acos], [asin], [atan], [atan2], [cosh], [sinh], [tanh], [ceil], [floor], [infinity], [neg_infinity], [nan], [epsilon], [pi], [frexp], [ldexp], [modf], [fpclass], [classify] added
	* batteries_core.ml: now use [ExtStream.Stream] instead of [Batlib_baselib_Stream]
	* extArray.ml?: [print] added
	* IO.ml: [identity] created
	* pa_mainfun.ml: created
	* META: [pa_mainfun] added
	* Makefile: [install], [syntax] now handle [pa_mainfun]
	* extList.mli: [t_of_sexp], [sexp_of_t] added to [ExtList.List]
	* extlib/*.mli: documented [@author]
	* batteries*ml: [Ref] added
	* extlib.mlpack: [Ref] added

10/09/2008 David Teller <David.Teller@univ-orleans.fr>:
	* batlib_Baselib_Buffer.mli:
	* batlib_Baselib_Digest.mli:
	* batlib_Baselib_Lazy.mli:
	* batlib_Baselib_Queue.mli:
	* batlib_Baselib_Stack.mli:
	* batlib_Baselib_Conv.mli: [with sexp] replaced with explicit type declarations
	* batlib_Baselib_Conv.mli: comments containing [@raise] fixed
	* odoc_generator_batlib.ml: [default_style_options] tweaked
	* option.ml*:
	* global.ml*: [t_of_sexp], [sexp_of_t] added
	* extlib/*.mli: replaced [with sexp] with [t_of_sexp] and [sexp_of_t]