@@ -69,9 +69,8 @@ calling [balance] after each modification would defeat the purpose of amortizati
 @author Mauricio Fernandez
 *)
  
-open ExtUTF8
-open CamomileLibrary
 open ExtUChar
+open ExtUTF8
  
 type t
   (** The type of the ropes. *)
